organized sections. fixed gap between item image and text. all item links go to the store. open new window when going to store.

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -218,7 +218,7 @@ section {
     list-style-type: none;
 }
 .project-card li {
-    margin-top: -20px; 
+    margin-top: 0px; 
 }
 
 .project-card .image-container {
